k8s/bank-receiver-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: bank-receiver-app
  name: bank-receiver-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bank-receiver-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/my-networks: "true"
        io.kompose.service: bank-receiver-app
    spec:
      containers:
        - args:
            - npm
            - run
            - bank-receiver-app:dev:docker
          image: luquinhasribeiro/open-banking-workspace-main_bank-receiver-app:latest
          name: bank-receiver-app
          ports:
            - containerPort: 4200
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: bank-receiver-app-claim0
      restartPolicy: Always
      volumes:
        - name: bank-receiver-app-claim0
          persistentVolumeClaim:
            claimName: bank-receiver-app-claim0
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: bank-receiver-app
  name: bank-receiver-app
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 4200
  selector:
    io.kompose.service: bank-receiver-app
status:
  loadBalancer: {}
