k8s/my-networks-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-networks
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/my-networks: "true"
  podSelector:
    matchLabels:
      io.kompose.network/my-networks: "true"
